--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,7 @@ on:
       - "go.sum"
       - "**.yml"
       - "**.yaml"
+      - "**.md"
   pull_request:
     branches: [master]
     paths:
@@ -73,3 +74,13 @@ jobs:
 
       - name: Run yamllint
         uses: reviewdog/action-yamllint@v1
+
+  markdownlint:
+    name: runner / markdownlint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: markdownlint
+        uses: reviewdog/action-markdownlint@v0
